--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>Главная</title>
-
-
 	<!-- <link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" /> -->
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
 	<link rel="stylesheet" href="css/fonts.css">
@@ -14,12 +12,9 @@
 	<link rel="stylesheet" href="css/animated-slider.css" />
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css"> -->
 	<link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
-
-
 	<header>
 		<div class="container">
 			<div class="date">
@@ -47,13 +42,75 @@
 
 		<div class="about-practice">
 			<div class="about-practice_inner">
-				<p>Эзотерические практики научат Вас считывать и использовать знаки вселенной, раскроют потенциал заложенный в Вас природой и активируют молниеносный рост доходов</p>
+				<p>Эзотерические практики научат Вас считывать и использовать знаки вселенной, раскроют<br /> потенциал заложенный в Вас природой и активируют молниеносный рост доходов</p>
 			</div>
 		</div>
-		<div class="tatyana-box container"><div class="tatyana"><img src="img/tatyana.png" alt=""></div></div>
+		<div class="tatyana-box container">
+			<div class="tatyana"><img src="img/tatyana.png" alt=""></div>
+		</div>
 	</header>
 
 	<main>
+		<div class="regBtn-top container">
+			<p>Осталось мест: <span>1000</span> 112</p>
+			<a href="#" class="regBtn">Зарегистрироваться в один клик</a>
+		</div>
+
+		<div class="QuestionToYourself">
+			<div class="container">
+				<h2>Многие спрашивают себя</h2>
+				<div class="Question-money">
+					<div class="Question-img"><img src="img/img1.png" alt=""></div>
+					<div class="Question-text">
+						<p>Как жить насыщенной яркой жизнью? <span>Где найти на нее деньги?</span><br> Где найти на нее время?</p>
+					</div>
+				</div>
+				<div class="Question-island">
+					<div class="Question-img"><img src="img/img2.png" alt=""></div>
+					<div class="Question-text">
+						<p>Как начать путешествовать по миру<br /> продолжая при этом <span>пассивно зарабатывать?</span></p>
+					</div>
+				</div>
+				<div class="Question-home">
+					<div class="Question-img"><img src="img/img3.png" alt=""></div>
+					<div class="Question-text">
+						<p>Как изменить качество жизни, купить новую машину, построить дом желательно<br /> <span>не дольше чем за год?</span></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="CourseProgram">
+			<div class="container">
+				<div class="course-title">
+					<p>Простые ответы на эти вопросы <br />в прямых эфихар новой результативной</p>
+					<h2>ПРОГРАММЫ <br />"ТОЧКА РОСТА"</h2>
+				</div>
+				<div class="course-block">
+					<div class="course-block_info">
+						<p>24 сентября</p>
+						<ul class="course-list">
+							<li>
+								Продиагностирую три вида вашей удачи: Небесную, Земную, Человеческую. Поймем насколько она Вас ограничивает в успехах и доходах. Я расскажу какими практиками можно откорректировать удачу
+							</li>
+							<li>
+								Эзотерическая практика ЕМС для быстрых денежных результатов. Как за три дня почувствовать первые результаты и увеличение денежных потоков?
+							</li>
+							<li>
+								Как найти в себе смелость принять решение и стойкое желание пробить свой финансовый потолок? Безболезненный и эффективный выход из зоны комфорта и переход в фазу "активного роста"
+							</li>
+							<li>
+								Мини-шоу в прямом эфире по определению Вашего личного финансового потолка
+							</li>
+						</ul>
+					</div>
+					<div class="course-block_img"></div>
+				</div>
+			</div>
+		</div>
+
+
+
 
 	</main>
 
