--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="course-block">
 					<div class="course-block_info">
 						<p>24 сентября</p>
-						<ul class="course-list">
+						<ul class="course-list course-list_first">
 							<li>
 								Продиагностирую три вида вашей удачи: Небесную, Земную, Человеческую. Поймем насколько она Вас ограничивает в успехах и доходах. Я расскажу какими практиками можно откорректировать удачу
 							</li>
@@ -104,8 +104,51 @@
 							</li>
 						</ul>
 					</div>
-					<div class="course-block_img"></div>
+					<div class="course-block-img"></div>
 				</div>
+
+				<div class="course-block">
+					<div class="course-block_info">
+						<p>25 сентября</p>
+						<ul class="course-list course-list_second">
+							<li>
+								Как влиять на людей и на исход переговоров? Как научится разговаривать на одном языке с коллегами, партнерами, детьми, родственниками? Как убедить работодателя, клиента, продавца в магазине в чем угодно через проработку его психокомплексов
+							</li>
+							<li>
+								Как перестать быть заложником обстоятельств, условий и ограничивающих убеждений? Чтобы жить как миллионер, нужно начинать думать как миллионер
+							</li>
+							<li>
+								Разберемся чего вы на самом деле хотите и можете достичь уже в этом году!
+							</li>
+							<li>
+								Узнаем как запланировать следующий год так, чтобы перестать копить на “самолет” но уже наяву летать на острова на отдых?
+							</li>
+						</ul>
+					</div>
+					<div class="course-block-img course-block-img__2"></div>
+				</div>
+
+				<div class="course-block">
+					<div class="course-block_info">
+						<p>26 сентября</p>
+						<ul class="course-list course-list_third">
+							<li>
+								Что именно вас сдерживает на пути к заветной цифре на банковском счету? Я открою Вам секрет - какая это цифра
+							</li>
+							<li>
+								Основы прибыльной нумерологии. Как выбирать денежные цифры при назначении цены, регистрации авто, приобретения недвижимости итд. Как использовать эти знания для выиграшей в лотерею и открытия новых источников дохода?
+							</li>
+							<li>
+								Как перейти на новый уровень жизни без рисков? Как запланировать расходы, чтобы они не ограничивали вас в задуманном? Как исползовать метафизику, чтобы научится видеть точки роста повсюду и использовать их? Как отркыть новое прибыльное направление?
+							</li>
+							<li>
+								Как закрыть все долги и больше не пускать их в свою жизнь?
+							</li>
+						</ul>
+					</div>
+					<div class="course-block-img course-block-img__3"></div>
+				</div>
+
 			</div>
 		</div>
 
