--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<div class="course-block-img"></div>
 				</div>
 
-				<div class="course-block">
+				<div class="course-block course-block_middle">
 					<div class="course-block_info">
 						<p>25 сентября</p>
 						<ul class="course-list course-list_second">
@@ -152,10 +152,76 @@
 			</div>
 		</div>
 
+		<div class="regBtn-center">
+			<div class="regBtn-center_article">
+				<p>Не нужно проводить больше времени на работе, выбирать между тратами на себя, на бизнес или на семью.</p>
+				<p>Наоборот, снимите с себя этот стресс и зарабатывайте больше живя обычной жизнью.</p>
+				<p>Принимайте решения в считанные секунды, оценивайте людей и выстраивайте эффективное общение, формулируйте правильно мысли и цели и почувствуйте в себе силы их реализовать</p>
+			</div>
+			<h2>Вселенная на вашей стороне</h2>
+			<a href="#" class="regBtn">Зарегистрироваться в один клик</a>
+		</div>
 
+		<div class="autor">
+			<div class="container">
+				<h2>АВТОР ИНТЕНСИВА</h2>
+				<div class="autor-about">
+					<div class="autor-img"><img src="img/foto-tatyana.png" alt="Автор Интенсива Татьяна Панюшкина"></div>
+					<div class="autor-article">
+						<p><span class="autor-name"> Татьяна Панюшкина - 64 года</span><br /> По образованию я инженер и социальный эколог. Автор и ведущая школ, семинаров, тренингов по личностному росту, энергоинформационной грамоте и этике. А также взаимоотношениям, партнерстве, раскрытию
+							творческого потенциала, практикам здорового тела. Автор методик по достижению целей, омоложению и оздоровлению. Создатель эксклюзивных энергоинформационных технологий.
+						</p>
+						<p class="knowledge-title">В своей работе я применяю знания:</p>
+						<ul class="autor-list">
+							<li>Астронумерологии, разработанной мною с учетом знаний метафизики</li>
+							<li>Нумерологии – традиционной, но переработанной мною с учетом Восточной нумерологии</li>
+							<li>У-СИН – концепция пяти первоэлементов, первостихий</li>
+						</ul>
+					</div>
+				</div>
 
+				<ul class="autor-list">
+					<li>Пондеромоторного письма – автоматическое письмо как амплитудно-частотная характеристика чакрального столба (АЧХ), с его помощью можно очень точно продиагностировать здоровье на всех уровнях, увидеть порчи, сглазы, привороты и т.д., а также уровень
+						энергетики, увидеть жизненный путь человека</li>
+					<li>Kитайской метафизики – феншуй, Ци Мень, 9 Дворцов</li>
+					<li>Использую карты Таро в изготовлении Талисманов, в гадании, в определении личностных качеств и этапов жизненных задач, разработанных мною на основе солнечных циклов, а также для расчета кодов Судьбы и Кармических задач, и для расчета совместимости
+						людей
+					</li>
+					<li>Использую Руны для изготовления Талисманов, ставов на различные темы</li>
+					<li>Хорошо использую Ясновидение и Яснознание, которыми владею очень давно</li>
+					<li>Успешно использую более 17 лет свои наработанные эзотерические методики избавления от любых болезней, болей любых, порч, сглазов, приворотов, лярв и прочей энергоинформационной дряни</li>
+					<li>Являюсь специалистом Традиционной Китайской Медицины, которую я изучаю более 17 лет, а также хорошо владею пульсологией для диагностики</li>
+				</ul>
 
+			</div>
+		</div>
+
+		<div class="regBtn-bottom container">
+			<h2>Вы ничем не рискуете</h2>
+			<p>Осталось мест: <span>1000</span> 112</p>
+			<a href="#" class="regBtn">Зарегистрироваться в один клик</a>
+		</div>
 	</main>
+
+	<footer>
+		<div class="container">
+			<ul>
+				<li>
+					<p>© Copyright 2012-2018 Люмос 22. Все права защищены.</p>
+					<p>ОГРН 31373273030027</p>
+					<p>ИНН 732771866121</p>
+				</li>
+				<li>
+					<p>8 (800) 350-03-08</p>
+					<p>пн.пт. 09:00-18:00</p>
+					<p>lumos22.com/tatyana-panyushkina</p>
+				</li>
+			</ul>
+			<div class="privacyPolicy">
+				<a href="#">Политика конфиденциальности<br /> и согласия с рассылкой</a>
+			</div>
+		</div>
+	</footer>
 
 
 
