--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 		<div class="regBtn-bottom container">
 			<h2>Вы ничем не рискуете</h2>
 			<p>Осталось мест: <span>1000</span> 112</p>
-			<a href="#" class="regBtn">Зарегистрироваться в один клик</a>
+			<a href="#" class="regBtn">Регистрация в один клик</a>
 		</div>
 	</main>
 
@@ -207,18 +207,18 @@
 		<div class="container">
 			<ul>
 				<li>
-					<p>© Copyright 2012-2018 Люмос 22. Все права защищены.</p>
+					<p>© Copyright 2012-2018 Люмос 22.<br /> Все права защищены.</p>
 					<p>ОГРН 31373273030027</p>
 					<p>ИНН 732771866121</p>
 				</li>
 				<li>
 					<p>8 (800) 350-03-08</p>
 					<p>пн.пт. 09:00-18:00</p>
-					<p>lumos22.com/tatyana-panyushkina</p>
+					<p><a href="">lumos22.com/tatyana-panyushkina</a></p>
 				</li>
 			</ul>
 			<div class="privacyPolicy">
-				<a href="#">Политика конфиденциальности<br /> и согласия с рассылкой</a>
+				<a href="https://lumos22.com/tatyana-panyushkina/">Политика конфиденциальности<br /> и согласия с рассылкой</a>
 			</div>
 		</div>
 	</footer>
